--- a/public/cadastro_produtor.html
+++ b/public/cadastro_produtor.html
@@ -7,24 +7,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/">Produtos Locais</a>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="btn btn-outline-secondary me-2" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-primary me-2" href="/cadastro_produto">Cadastrar Produto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-info" href="/produtores">Ver Produtores</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container mt-4">
-        <h1>Cadastro de Produtor</h1>
-        <form action="/produtores/cadastro" method="POST">
+        <h1 class="text-center mb-4">Cadastro de Produtor</h1>
+
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <div class="alert alert-success">
+                {% for msg in messages %}
+                {{ msg }}
+                {% endfor %}
+            </div>
+            {% endif %}
+        {% endwith %}
+
+        <form method="POST" action="/cadastro_produtor">
             <div class="mb-3">
-                <label for="nome" class="form-label">Nome</label>
-                <input type="text" id="nome" name="nome" class="form-control" required>
+                <label class="form-label">Nome</label>
+                <input type="text" class="form-control" name="nome" required>
             </div>
             <div class="mb-3">
-                <label for="localidade" class="form-label">Localidade</label>
-                <input type="text" id="localidade" name="localidade" class="form-control" required>
+                <label class="form-label">WhatsApp</label>
+                <input type="text" class="form-control" name="whatsapp" placeholder="(DDD) 90000-0000" required>
             </div>
             <div class="mb-3">
-                <label for="telefone" class="form-label">Telefone (com DDD)</label>
-                <input type="text" id="telefone" name="telefone" class="form-control" required>
+                <label class="form-label">Localidade</label>
+                <input type="text" class="form-control" name="localidade">
             </div>
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
+            <button type="submit" class="btn btn-primary">Cadastrar Produtor</button>
         </form>
-        <a href="/" class="btn btn-link mt-3">Voltar</a>
     </div>
 </body>
 </html>
