--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/">Produtos Locais</a>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item ">
+                    <a class="btn btn-outline-primary" href="/cadastro_produto">Cadastrar Produto</a>
+                </li>
+                <li class="nav-item ms-2">
+                    <a class="btn btn-outline-primary" href="/cadastro_produtor">Cadastrar Produtor</a>
+                </li>
+                <li class="nav-item ms-2">
+                    <a class="btn btn-outline-info" href="/produtores">Ver Produtores</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
     <div class="container mt-4">
-        <h1 class="text-center">Produtos Locais</h1>
-        <div class="row mt-4">
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="https://placehold.co/300x200" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Tomates Orgânicos</h5>
-                        <p class="card-text">R$ 10,00/kg</p>
-                        <a href="https://wa.me/5500000000000" class="btn btn-success">Falar no WhatsApp</a>
+        <h1 class="text-center mb-4">Produtos Disponíveis</h1>
+        <div class="row">
+            {% for produto in produtos %}
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-4 d-flex align-items-stretch">
+                <div class="card w-100">
+                    <img src="{{ produto[4] if produto[4] else 'https://placehold.co/300x200' }}" class="card-img-top" alt="Produto">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">{{ produto[1] }}</h5>
+                        <p class="card-text">R$ {{ produto[2] }}</p>
+                        {% if produto[3] %}
+                        <p class="card-text">{{ produto[3] }}</p>
+                        {% endif %}
+                        <p class="card-text mt-auto"><small>Produtor: {{ produto[5] }}</small></p>
+                        <a href="https://wa.me/{{ produto[6]|replace('(','')|replace(')','')|replace('-','') }}" class="btn btn-success mt-2">Falar no WhatsApp</a>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
 </body>
