--- a/public/lista_produtores.html
+++ b/public/lista_produtores.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Produtores</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Lista de Produtos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="/">Produtos Locais</a>
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="btn btn-outline-primary me-2" href="cadastro_produtor">Cadastrar Produtor</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-outline-secondary" href="cadastro_produto">Cadastrar Produto</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container mt-4">
-        <h1 class="text-center mb-4">Produtores Cadastrados</h1>
-        <div class="row">
-            {% for produtor in produtores %}
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-4 d-flex align-items-stretch">
-                <div class="card w-100">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">{{ produtor[1] }}</h5>
-                        {% if produtor[3] %}
-                        <p class="card-text">Localidade: {{ produtor[3] }}</p>
-                        {% endif %}
-                        <p class="card-text mt-auto">
-                            <a href="https://wa.me/{{ produtor[2]|replace('(','')|replace(')','')|replace('-','') }}" class="btn btn-success">Falar no WhatsApp</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
+  <div class="container mt-4">
+    <h1 class="mb-4">Produtos Cadastrados</h1>
+    <a href="/" class="btn btn-secondary mb-3">← Produtos Locais</a>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Preço</th>
+          <th>Descrição</th>
+          <th>Produtor</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for p in produtos %}
+        <tr>
+          <td>{{ p[1] }}</td>
+          <td>R$ {{ "%.2f"|format(p[2]) }}</td>
+          <td>{{ p[3] }}</td>
+          <td>{{ p[5] }}</td>
+          <td>
+            <a href="/editar_produto/{{ p[0] }}" class="btn btn-warning btn-sm">Editar</a>
+            <a href="/deletar_produto/{{ p[0] }}" class="btn btn-danger btn-sm">Excluir</a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
